--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
